<resources>
    <string name="app_name">Fit N Food</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_weight">Your weight</string>
    <string name="next">next</string>
    <string name="your_gender">Your gender</string>
    <string name="how_old_are_you">How old are you ?</string>
    <string name="your_name">Your name</string>
    <string name="fit_n_food">Fit N Food</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="choose_exercise_program">Choose program</string>
    <string name="fit">Fit</string>
    <string name="food">Food</string>
</resources>